# visitors-cleanroom

./: CLAUDE.md  README.md  dune-project  visitors-cleanroom.opam
.github/workflows/: ci.yml
bench/: bench.ml  bench_functors.ml  dune
lib/: dune  visitorsRuntime.ml  visitors_reimpl_runtime.ml  visitors_reimpl_runtime.mli
lib/alias/: dune  visitorsRuntime.ml
ppx/: dune
test/: dune  test_traversal.ml  test_visitors_runtime.ml
test/functor_visitors/: dune  functor_visitors.ml
test/types_ours/: dune
